

## ----------------------------------------------------------------------- ##
## Version 0.1.2
## ----------------------------------------------------------------------- ##

- Speedup regression and probability prediction forests
- Prediction forests are now handled like regression forests: MSE used for
	prediction error and permutation importance
- Fix name conflict with randomForest package for "importance"
- Fixed a bug: prediction function is now working for probability
	prediction forests
- Slot "predictions" for probability forests now contains class probabilities
- importance function is now working even if randomForest package is
	loaded after ranger
- Small changes in documentation